--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
             </footer>
         </article>
     </main>
+
+    <footer class="attribution">
+        Challenge by 
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+        . Coded by
+        <a href="https://github.com/dvcode01" target="_blank">David Olivero</a>
+    </footer>
 </body>
 </html>
